syntax = "proto3";

package pacemaker;

option java_multiple_files = true;
option java_package = "org.pacemaker.proto.models";
option java_outer_classname = "ResourcesProtos";

message Resources {
    float cpus = 1;
    float memory = 2;
    float gpus = 3;
    repeated Disk disks = 4;
    repeated Port ports = 5;
}

message Disk {
    enum DiskType {
        Root = 0;
        Path = 1;
        Mount = 2;
    }

    string id = 1;
    float size = 2;
    DiskType type = 3;
    bool persistent = 4;
    Volume volume = 5;
}

message Volume {
    enum Mode {
        READ_WRITE = 0;
        READ_ONLY = 1;
    }
    enum SourceType {
        None = 0;
        Host = 1;
        Sandbox = 2;
        Docker = 3;
        Secret = 4;
    }

    Mode mode = 1;
    SourceType sourceType = 2;
    string sourcePath = 3;
    string destinationPath = 4;
    bool shared = 5;
}

message Port {
    uint32 port = 1;
    bool expose = 2;
    string name = 3;
}
